--- a/lets-make-it-chef/package.json
+++ b/lets-make-it-chef/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
-    "mongoose": "^7.6.3"
+    "mongoose": "^7.6.3",
+    "passport": "^0.6.0"
   }
 }
