--- a/best-locations-app/.gitignore
+++ b/best-locations-app/.gitignore
@@ -22,5 +22,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-API-KEY = 
-make seperate file and link to it. may want to ref previous projects
+.env
+
