--- a/best-locations-app/backend/package.json
+++ b/best-locations-app/backend/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "git-filter-repo": "^0.0.30",
+    "mongoose": "^8.4.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
